# RT_project

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json-template  README.md  aabb.cuh  aabb.h  bvh.cuh  bvh.h  bvh_builder.cuh  camera.cuh  camera.h  color.cuh  color.h  geometry.cuh  get_hit.cuh  globals.cuh  helpers.cuh  hittable.cu  hittable.cuh  hittable.h  hittable_list.cu  hittable_list.cuh  hittable_list.h  image_loader.cu  image_loader.cuh  interval.cuh  interval.h  main.cc  main.cu  material.cuh  material.h  quad.h  ray.cuh  ray.h  rtweekend.h  sphere.h  test_script.py  texture.cu  texture.cuh  (+5 more)
.github/workflows/: release.yml
cmake/: AddFile.cmake
include/: pseudo_rnd.hpp  sdl_wrapper.hpp  utils.hpp
